# itgmania

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  StepmaniaCore.cmake  itgmania.desktop  notes-from-outfox.md  stepmania.nsi
src/: ActiveAttackList.cpp  ActiveAttackList.h  Actor.cpp  Actor.h  ActorFrame.cpp  ActorFrame.h  ActorFrameTexture.cpp  ActorFrameTexture.h  ActorMultiTexture.cpp  ActorMultiTexture.h  ActorMultiVertex.cpp  ActorMultiVertex.h  ActorProxy.cpp  ActorProxy.h  ActorScroller.cpp  ActorScroller.h  ActorSound.cpp  ActorSound.h  ActorUtil.cpp  ActorUtil.h  AdjustSync.cpp  AdjustSync.h  AnnouncerManager.cpp  AnnouncerManager.h  ArrowEffects.cpp  ArrowEffects.h  Attack.cpp  Attack.h  AttackDisplay.cpp  AttackDisplay.h  AutoActor.cpp  AutoActor.h  AutoKeysounds.cpp  AutoKeysounds.h  BGAnimation.cpp  BGAnimation.h  BGAnimationLayer.cpp  BGAnimationLayer.h  BPMDisplay.cpp  BPMDisplay.h  (+595 more)
src/Texture Font Generator/: Texture Font GeneratorDlg.cpp  Texture Font GeneratorDlg.h  TextureFont.cpp  TextureFont.h  Utils.cpp  Utils.h  stdafx.h
src/arch/: RageDriver.cpp  RageDriver.h  arch_default.h
src/arch/ArchHooks/: ArchHooks.h  ArchHooksUtil.cpp  ArchHooks_MacOSX.mm  ArchHooks_Unix.cpp  ArchHooks_Unix.h  ArchHooks_Win32.cpp  ArchHooks_Win32Static.cpp
src/arch/Dialog/: Dialog.cpp  DialogDriver.cpp  DialogDriver.h  DialogDriver_MacOSX.cpp  DialogDriver_Win32.cpp
src/arch/InputHandler/: InputHandler.cpp  InputHandler.h  InputHandler_DirectInput.cpp  InputHandler_DirectInput.h  InputHandler_DirectInputHelper.h  InputHandler_Linux_Event.cpp  InputHandler_Linux_Event.h  InputHandler_Linux_Joystick.cpp  InputHandler_Linux_Joystick.h  InputHandler_Linux_PIUIO.cpp  InputHandler_Linux_PIUIO.h  InputHandler_MacOSX_HID.h  InputHandler_MacOSX_HID.mm  InputHandler_MonkeyKeyboard.cpp  InputHandler_MonkeyKeyboard.h  InputHandler_NSEvent.hpp  InputHandler_NSEvent.mm  InputHandler_SDL.cpp  InputHandler_SDL.h  InputHandler_SextetStream.cpp  InputHandler_SextetStream.h  InputHandler_SextetStream.md  InputHandler_Win32_MIDI.cpp  InputHandler_Win32_MIDI.h  InputHandler_Win32_Para.cpp  InputHandler_Win32_Para.h  InputHandler_Win32_Pump.cpp  InputHandler_Win32_Pump.h  InputHandler_Win32_RTIO.cpp  InputHandler_Win32_RTIO.h  InputHandler_Win32_ddrio.cpp  InputHandler_Win32_ddrio.h  InputHandler_X11.cpp  InputHandler_X11.h  LinuxInputManager.cpp  LinuxInputManager.h
src/arch/Lights/: LightsDriver.cpp  LightsDriver.h  LightsDriver_LinuxMinimaid.cpp  LightsDriver_LinuxPacDrive.cpp  LightsDriver_LinuxPacDrive.h  LightsDriver_LinuxParallel.cpp  LightsDriver_LinuxWeedTech.cpp  LightsDriver_Linux_Leds.cpp  LightsDriver_Linux_Leds.h  LightsDriver_Linux_PIUIO.cpp  LightsDriver_Linux_PacDrive.cpp  LightsDriver_Linux_PacDrive.h  LightsDriver_Linux_stac.cpp  LightsDriver_Linux_stac.h  LightsDriver_PacDrive.cpp  LightsDriver_PacDrive.h  LightsDriver_SextetStream.cpp  LightsDriver_SextetStream.md  LightsDriver_SystemMessage.cpp  LightsDriver_Win32Minimaid.cpp  LightsDriver_Win32Parallel.cpp  LightsDriver_Win32Serial.cpp  LightsDriver_Win32Serial.h  SextetUtils.h
src/arch/LoadingWindow/: LoadingWindow.cpp  LoadingWindow_Gtk.cpp  LoadingWindow_MacOSX.h  LoadingWindow_MacOSX.mm  LoadingWindow_Win32.cpp  LoadingWindow_Win32.h
src/arch/LowLevelWindow/: LowLevelWindow_MacOSX.h  LowLevelWindow_MacOSX.mm  LowLevelWindow_SDL.cpp  LowLevelWindow_SDL.h  LowLevelWindow_Win32.cpp  LowLevelWindow_Win32.h  LowLevelWindow_X11.cpp  LowLevelWindow_X11.h
src/arch/MemoryCard/: MemoryCardDriver.cpp  MemoryCardDriver.h  MemoryCardDriverThreaded_Folder.cpp  MemoryCardDriverThreaded_Folder.h  MemoryCardDriverThreaded_Linux.cpp  MemoryCardDriverThreaded_Linux.h  MemoryCardDriverThreaded_MacOSX.cpp  MemoryCardDriverThreaded_MacOSX.h  MemoryCardDriverThreaded_Windows.cpp  MemoryCardDriverThreaded_Windows.h  MemoryCardDriver_Null.h
src/arch/MovieTexture/: MovieTexture.cpp  MovieTexture_DShow.cpp  MovieTexture_DShowHelper.cpp  MovieTexture_FFMpeg.cpp  MovieTexture_FFMpeg.h  MovieTexture_Generic.cpp  MovieTexture_Generic.h  MovieTexture_Null.cpp
src/arch/Sound/: ALSA9Dynamic.h  ALSA9Functions.h  ALSA9Helpers.cpp  ALSA9Helpers.h  DSoundHelpers.cpp  DSoundHelpers.h  RageSoundDriver.cpp  RageSoundDriver.h  RageSoundDriver_ALSA9_Software.cpp  RageSoundDriver_ALSA9_Software.h  RageSoundDriver_AU.h  RageSoundDriver_AU.mm  RageSoundDriver_DSound_Software.cpp  RageSoundDriver_DSound_Software.h  RageSoundDriver_Generic_Software.cpp  RageSoundDriver_JACK.cpp  RageSoundDriver_JACK.h  RageSoundDriver_Null.cpp  RageSoundDriver_Null.h  RageSoundDriver_OSS.cpp  RageSoundDriver_OSS.h  RageSoundDriver_PulseAudio.cpp  RageSoundDriver_PulseAudio.h  RageSoundDriver_WDMKS.cpp  RageSoundDriver_WDMKS.h  RageSoundDriver_WaveOut.cpp  RageSoundDriver_WaveOut.h
src/arch/Threads/: Threads.h  Threads_Pthreads.cpp  Threads_Pthreads.h  Threads_Win32.cpp  Threads_Win32.h
src/archutils/: SpecialDirs.h
src/archutils/Common/: PthreadHelpers.cpp  PthreadHelpers.h  gcc_byte_swaps.h
src/archutils/Darwin/: Crash.mm  DarwinThreadHelpers.cpp  DarwinThreadHelpers.h  HIDDevice.cpp  HIDDevice.h  JoystickDevice.cpp  JoystickDevice.h  KeyboardDevice.cpp  KeyboardDevice.h  MouseDevice.cpp  MouseDevice.h  PreferredLanguage.m  PumpDevice.cpp  PumpDevice.h  SMMain.mm  SpecialDirs.mm  VectorHelper.cpp  arch_setup.h
src/archutils/Unix/: AssertionHandler.cpp  Backtrace.cpp  Backtrace.h  BacktraceNames.cpp  BacktraceNames.h  CrashHandler.cpp  CrashHandler.h  CrashHandlerChild.cpp  EmergencyShutdown.cpp  SignalHandler.cpp  SignalHandler.h  (+3 more)
src/smpackage/: ChangeGameSettings.h  CreateLanguageDlg.cpp  EditInsallations.cpp  EditInsallations.h  EnterComment.h  EnterName.h  LanguagesDlg.cpp  MainMenuDlg.cpp  MainMenuDlg.h  SMPackageInstallDlg.cpp  SMPackageInstallDlg.h  SMPackageUtil.cpp  ShowComment.h  SmpackageExportDlg.cpp  SmpackageExportDlg.h  StdAfx.h  TreeCtrlEx.h  smpackage.cpp  smpackage.h  smpackageUtil.h
src/tests/: 00 README  Wallclock.h  test_audio_readers.cpp  test_file_errors.cpp  test_threads.cpp  test_timing_data.cpp  test_vector.cpp
(+155 files in other folders)
